2009-08-13  Shinichiro Hamaji  <hamaji@chromium.org>

Reviewed by Eric Seidel.

        wrong calculation of overflow size for flexbox and table
        https://bugs.webkit.org/show_bug.cgi?id=28064

        RenderFlexibleBox and RenderTable were using the width of overflow
        to update height of overflow, so height became wrong value and
        width was not updated. As the corresponding code of RenderBlock
        was sane, I factored it out and used from RenderFlexibleBox and
        RenderTable.

        * fast/reflections/reflection-overflow-scroll-expected.txt:
        * fast/reflections/reflection-overflow-scroll.html:
        * fast/reflections/resources/reflection-overflow-scroll.js:

2009-08-13  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Eric Seidel.

        wrong calculation of overflow size for flexbox and table
        https://bugs.webkit.org/show_bug.cgi?id=28064

        RenderFlexibleBox and RenderTable were using the width of overflow
        to update height of overflow, so height became wrong value and
        width was not updated. As the corresponding code of RenderBlock
        was sane, I factored it out and used from RenderFlexibleBox and
        RenderTable.

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::updateOverflowWithShadowAndReflection): created from code of layoutBlock
        (WebCore::RenderBlock::layoutBlock):
        * rendering/RenderBlock.h:
        * rendering/RenderFlexibleBox.cpp: use updateOverflowWithShadowAndReflection
        (WebCore::RenderFlexibleBox::layoutBlock):
        * rendering/RenderTable.cpp:
        (WebCore::RenderTable::layout): use updateOverflowWithShadowAndReflection

Canonical link: https://commits.webkit.org/38801@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47200 268f45cc-cd09-0410-ab3c-d52691b4dbfc